fix height of images on mobile

--- a/style.css
+++ b/style.css
@@ -700,6 +700,7 @@ img.alignright {
 
 	.entry-content img{
 		max-width: 100%;
+		height: auto;
 	}
 
 	.contact-menu{
